# tosh

./: .build.yml  .gitignore  .gitmodules  .header  Makefile  README.md  author  ft_atoi.c  ft_atoi.test.c  ft_bzero.c  ft_bzero.test.c  ft_isalnum.test.c  ft_isalpha.test.c  ft_isascii.test.c  ft_isdigit.test.c  ft_isprint.c  ft_isprint.test.c  ft_isspace.test.c  ft_itoa.c  ft_itoa.test.c  ft_lstadd.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.test.c  ft_memccpy.c  ft_memccpy.test.c  ft_memchr.c  ft_memchr.test.c  ft_memcmp.c  ft_memcmp.test.c  ft_memcpy.c  ft_memcpy.test.c  ft_memdel.c  ft_memdel.test.c  ft_memmove.c  ft_memmove.test.c  ft_memset.c  ft_memset.test.c  ft_print_memory.c  (+74 more)
contrib/: meson-norm.sh
docs/: ast.txt  newline.md
inc/: color.h  fmt.h  ft_getline.h  ft_printf.h  number.h  parser.h  token.h  writer.h
scripts/: addheader  header  meson-norminette  meson-valgrind  mkmod  valgrind
src/: fmt_color.c  fmt_ntoa.c  fmt_padding.c  fmt_printmemory.c  fmt_putflt.c  fmt_puthex.c  fmt_putnbr.c  fmt_putoct.c  fmt_putpercent.c  fmt_putptr.c  fmt_putstr.c  fmt_putuns.c  fmt_read.c  fmt_utils.c  ft_arraydel.c  ft_atoi.c  ft_dprintf.c  ft_fprintf.c  ft_intlen.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstdel.c  ft_lstpop.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_printf.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_sprintf.c  ft_strcat.c  ft_strchr.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+12 more)
src/bootstrap/: main.c  meson.build  priv.h  private.h  tosh.c
src/env/: clear.c  clear_test.c  delete.c  delete_test.c  env.h  from_envp.c  from_envp_test.c  get.c  get_exit_status.c  get_test.c  get_unsafe.c  get_unsafe_test.c  is_key_char.c  list_delete.c  list_delete_test.c  meson.build  private.h  set.c  set_exit_status.c  set_test.c  to_envp.c  to_envp_test.c  unpack.c  unset.c  unset_test.c
src/error/: error.h  error_none.c  errorf.c  errorf_test.c  is_error.c  is_error_test.c  meson.build  pub.h
src/exec/: _clear_arguments.c  _clear_program.c  _expand_family.c  _handle_redirections.c  _identify_builtin.c  _identify_executable.c  _kill_all_children.c  basic_redirect.c  child_process_control.c  clear_arguments.c  exec.h  expand_family.c  handle_redirections.c  identify_builtin.c  identify_executable.c  is_protected_fd.c  kill_all_children.c  kill_child.c  meson.build  prepare_program.c  private.h  run.c  sequence.c  set_arguments.c  single.c  unpack_child.c
src/exec/builtin/: builtin.h  cd.c  echo.c  env.c  exit.c  setenv.c  unsetenv.c
src/exec/quote_and_expansion/: heredoc.c  machine_definitions.h  quote_and_expansion.c  quote_and_expansion.h  replacer_fsm.c
src/exec/redirect/: all_adv_redirector.c  all_basic_redirector.c  all_redirector.c  handle_redirections.c  is_protected_fd.c  open_file.c  pre_redirections.c  redirect_heredoc.c  trackers.c  unpack_tracker.c
src/history/: create.c  debug.c  destroy.c  down.c  history.h  meson.build  private.h  push.c  read_all.c  unpack.c  up.c
src/input/: action_backspace.c  action_cancel.c  action_copy.c  action_cut.c  action_done.c  action_down.c  action_history_down.c  action_history_up.c  action_insert.c  action_left.c  action_max_left.c  action_max_right.c  action_paste.c  action_resize.c  action_return.c  action_right.c  action_select_cancel.c  action_select_start.c  action_tab.c  action_up.c  action_update_width.c  action_word_left.c  action_word_right.c  configure.c  debug.c  draw.c  input.h  meson.build  next_action.c  private.h  read.c  read_keypress.c  read_seq.c  run_next_action.c  run_next_action_test.c  wrap.c  wrap_cursor.c  wrap_cursor_test.c  wrap_test.c
src/lexer/: clear.c  genfsm.py  handler.c  lexer.h  meson.build  private.h  token.c  tokenize.c  tokenize_test.c  unpack_token.c
src/parser/: _errorf.c  _is_token.c  _next_if_token.c  _next_token.c  _peek_token.c  _request_extra_input.c  check_test.c  cmd_prefix.c  cmd_suffix.c  complete_command.c  errorf.c  io_file.c  io_here.c  io_redirect.c  io_redirect_test.c  is_token.c  list.c  meson.build  next_if_token.c  next_token.c  parse.c  parse_test.c  parser.h  peek_token.c  pipe_sequence.c  private.h  simple_command.c  simple_command_test.c  test.h
src/term/: clear_to_end.c  clearline.c  configure.c  cursor_goto.c  cursor_move.c  getcursor.c  getsize.c  handle_resize.c  init.c  meson.build  print.c  priv.h  private.h  pub.h  restore.c  send.c  setup.c  term.h  wrap.c  wrap_test.c
subprojects/libft/: Makefile  README.md  libft.h  meson.build  normify
subprojects/libft/inc/: ft_getline.h
subprojects/libft/src/: ft_arraydel.c  ft_atoi.c  ft_bzero.c  ft_getline.c  ft_getopt.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_list_insert.c  ft_list_unlink.c  ft_lstdelone.c  ft_lstiter.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_sort.c  ft_strappendbytes.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdropwhile.c  ft_strdup.c  ft_strequ.c  ft_strfoversplit.c  ft_striter.c  ft_striteri.c  (+21 more)
subprojects/libftprintf/: ft_printf.h  main.c
subprojects/libftprintf/inc/: color.h  fmt.h  number.h  parser.h  std.h  token.h  writer.h
subprojects/libftprintf/src/: fmt_color.c  fmt_ntoa.c  fmt_padding.c  fmt_printmemory.c  fmt_putflt.c  fmt_puthex.c  fmt_putnbr.c  fmt_putoct.c  fmt_putpercent.c  fmt_putptr.c  fmt_putstr.c  fmt_putuns.c  fmt_read.c  fmt_utils.c  ft_dprintf.c  ft_fprintf.c  ft_printf.c  ft_sprintf.c  parse_utils.c  parser.c  parser_checkers.c  parser_segments.c  runner.c  std_memory.c  std_misc.c  std_string.c  writer.c  writer_utils.c
subprojects/libftprintf/test/: Makefile
subprojects/libftprintf/test/spec/: printf_float.spec.c  printf_hex.spec.c  (+8 more)
test/: Makefile
test/spec/: printf_float.spec.c  printf_hex.spec.c  printf_multi.spec.c  printf_number.spec.c  printf_octal.spec.c  printf_should_fail.spec.c  printf_string.spec.c  printf_unsigned_number.spec.c  sprintf.spec.c  token_parser.spec.c
