src_files += files(
	'get_unsafe.c',
	'delete.c',
	'from_envp.c',
	'get.c',
	'set.c',
	'unset.c',
	'to_envp.c',
	'unpack.c',
	'get_exit_status.c',
	'set_exit_status.c',
	'is_key_char.c',
)

test_files += files(
	'delete_test.c',
	'from_envp_test.c',
	'get_test.c',
	'get_unsafe_test.c',
	'set_test.c',
	'unset_test.c',
	'to_envp_test.c',
)
