src_files += files(
	'basic_redirect.c',
	'child_process_control.c',
	'clear_arguments.c',
	'expand_family.c',
	'handle_redirections.c',
	'identify_builtin.c',
	'identify_executable.c',
	'kill_all_children.c',
	'run.c',
	'sequence.c',
	'set_arguments.c',
	'single.c',
	'unpack_child.c',
)

test_files += files()
