src_files += files(
	'child_process_control.c',
	'clear_arguments.c',
	'expand_family.c',
	'identify_builtin.c',
	'identify_executable.c',
	'kill_all_children.c',
	'kill_child.c',
	'run.c',
	'sequence.c',
	'set_arguments.c',
	'single.c',
	'unpack_child.c',
	'redirect/handle_redirections.c',
	'redirect/is_protected_fd.c',
	'redirect/all_adv_redirector.c',
	'redirect/all_basic_redirector.c',
	'redirect/open_file.c',
	'redirect/trackers.c',
	'redirect/unpack_tracker.c',
	'builtin/cd.c',
	'builtin/exit.c',
	'builtin/setenv.c',
	'builtin/echo.c',
	'builtin/unsetenv.c',
)
test_files += files()
