src_files += files(
	'action_backspace.c',
	'action_history_down.c',
	'action_history_up.c',
	'action_insert.c',
	'action_left.c',
	'action_resize.c',
	'action_return.c',
	'action_right.c',
	'configure.c',
	'debug.c',
	'draw.c',
	'read.c',
	'read_keypress.c',
	'run_next_action.c',
)

test_files += files(
	'run_next_action_test.c',
)
