src_files += files(
	'action_backspace.c',
	'action_copy.c',
	'action_cut.c',
	'action_history_down.c',
	'action_history_up.c',
	'action_insert.c',
	'action_left.c',
	'action_max_left.c',
	'action_max_right.c',
	'action_paste.c',
	'action_resize.c',
	'action_return.c',
	'action_right.c',
	'action_select_cancel.c',
	'action_select_start.c',
	'action_word_left.c',
	'action_word_right.c',
	'configure.c',
	'debug.c',
	'draw.c',
	'read.c',
	'read_keypress.c',
	'run_next_action.c',
)

test_files += files(
	'run_next_action_test.c',
)
