src_files += files(
	'_errorf.c',
	'_is_token.c',
	'_next_token.c',
	'_next_if_token.c',
	'_peek_token.c',
	'_request_extra_input.c',
	'cmd_prefix.c',
	'cmd_suffix.c',
	'complete_command.c',
	'io_file.c',
	'io_here.c',
	'io_redirect.c',
	'list.c',
	'parse.c',
	'pipe_sequence.c',
	'simple_command.c',
)

test_files += files(
	'check_test.c',
	'io_redirect_test.c',
	'parse_test.c',
	'simple_command_test.c',
)
