src_files += files(
	'cmd_prefix.c',
	'cmd_suffix.c',
	'complete_command.c',
	'errorf.c',
	'io_file.c',
	'io_here.c',
	'io_redirect.c',
	'is_token.c',
	'list.c',
	'next_if_token.c',
	'next_token.c',
	'parse.c',
	'peek_token.c',
	'pipe_sequence.c',
	'simple_command.c',
)

test_files += files(
	'check_test.c',
	'io_redirect_test.c',
	'parse_test.c',
	'simple_command_test.c',
)
